# hume-api-examples

./: .gitignore  Directory.Packages.props  LICENSE  README.md  monorepo.code-workspace  package-lock.json
.github/: dependabot.yml
.github/workflows/: dependabot-auto-merge.yml  evi-next-js-ci.yml  test-examples.yml
evi/: stuff
evi-chat-history-example/: package.json
evi-clm-endpoint/cdk/: README.md
evi-custom-language-model/: README.md  agent.py  main.py  pyproject.toml
evi-custom-language-model-sse/: README.md  openai_sse.py
evi-custom-language-model-wss/: README.md
evi-custom-language-model-wss/docs/: detailed-install-instructions-mac.md
evi-embed-vue/: .gitignore  README.md  package.json  pnpm-lock.yaml
evi-flutter-example/: .env.example  .gitignore  README.md  pubspec.yaml
evi-flutter-example/audio/: .metadata  README.md  pubspec.yaml
evi-flutter-example/lib/: chat_card.dart  evi_message.dart  main.dart
evi-flutter-example/web/: index.html  manifest.json
evi-modal-clm/: Dockerfile  README.md  app.py  main.py  pyproject.toml
evi-modal-clm/cdk/cdk/: eliza_stack.py
evi-next-js-app-router/: README.md  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml
evi-next-js-app-router/app/: error.tsx
evi-next-js-app-router/components/: Expressions.tsx
evi-next-js-app-router/utils/: expressionColors.ts
evi-next-js-function-calling/: .env.example  README.md  package.json  pnpm-lock.yaml
evi-next-js-function-calling/app/: page.tsx
evi-next-js-function-calling/components/: ClientComponent.tsx
evi-next-js-pages-router/: .env.example  README.md  next.config.js  package-lock.json  package.json  pnpm-lock.yaml
evi-prompt-examples/: README.md  default_prompt.txt
evi-python-api-example/: .gitignore  README.md  requirements_linux.txt  requirements_mac.txt
evi-python-api-example/src/: main.py  (+2 more)
evi-python-chat-history-example/: README.md  main.py  pyproject.toml
evi-python-example/: .env  .env.example  README.md  quickstart.py  run-evi.py  run_evi.py
evi-python-function-calling/: .env.example  .gitignore  LICENSE  README.md  main.py
evi-python-webhooks-example/: .env.example  README.md  app.py  hume_webhook_types.py  pyproject.toml  utils.py
evi-rag-function-calling-next.js/: .env.example  .gitignore  README.md  package-lock.json  package.json  tailwind.config.js
evi-react-native-example/: .gitignore  App.tsx  README.md  app.json  package.json  pnpm-lock.yaml
evi-sveltekit/: .env.example  package.json  pnpm-lock.yaml
evi-touchdesigner-example/: .gitignore  Hume.53.toe  Hume.toe  HumeTD.tox  HumeTDDemo.toe  README.md
evi-typescript-chat-history-example/: .env.example  .gitignore  README.md  package.json  tsconfig.json
evi-typescript-example/: .env  .env.example  .gitignore  README.md  index.html  package.json  pnpm-lock.yaml
evi-typescript-function-calling/: .env.example  README.md  index.html  package.json  pnpm-lock.yaml
evi-typescript-webhooks-example/: .env.example  package-lock.json  package.json  pnpm-lock.yaml
evi-wss-clm-endpoint/: pyproject.toml
evi-wss-clm-endpoint/cdk/cdk.out/: tree.json
evi-wss-clm-endpoint/cdk/cdk.out/asset.689e46f5ffafa1e0f81f114b5dfd7694d2d1e291d9bd855e4f7b601d2b2403d0/: app.py
evi-wss-clm-endpoint/cdk/cdk.out/asset.689e46f5ffafa1e0f81f114b5dfd7694d2d1e291d9bd855e4f7b601d2b2403d0/modal/: README.md  modal_app.py
evi-wss-clm-endpoint/cdk/cdk.out/asset.f372550efb96be7f549f1d0346e8646080c1fe2b15c7c2e3b1dceb07b6656c54/: .dockerignore  README.md  app.py
evi/custom-language-model/evi-python-clm-sse/: pyproject.toml
evi/evi-python-chat-history/: README.md  pyproject.toml  transcript_4d720063-d4ab-4407-ad22-e41079373d79.txt
evi/evi-python-clm-wss/: README.md  main.py  pyproject.toml
evi/evi-python-phone-calling-proxy-server/: .env.example  .gitignore  README.md  app.py  pyproject.toml  tools.py
evi/evi-python-phone-calling-proxy-server/audio_processors/: twilio_audio_processor.py
evi/evi-python-quickstart/: .gitignore  README.md  conftest.py  pyproject.toml  quickstart.py  test_quickstart.py
evi/evi-python-webhooks/: .env.example  README.md  app.py  pyproject.toml  utils.py
evi/evi-python-wss-clm-endpoint/: pyproject.toml
evi/evi-python-wss-clm-endpoint/cdk/: app.py  requirements.txt
evi/evi-python-wss-clm-endpoint/cdk/cdk.out/: ElizaStack.template.json  manifest.json
evi/evi-python-wss-clm-endpoint/cdk/cdk.out/asset.f372550efb96be7f549f1d0346e8646080c1fe2b15c7c2e3b1dceb07b6656c54/: agent.py
expression-measurement/streaming/python-streaming-example/: .env.example  .gitignore  README.md  main.py  pyproject.toml  test_main.py
meld/: README.md  package.json  pnpm-lock.yaml  tailwind.config.js
python-examples/: top_emotions.py
python-top-emotions/: README.md  top_emotions.py
sandbox/: README.md  package.json  tailwind.config.js
tts-python-example/: README.md  app.py  pyproject.toml
tts-typescript-example/: README.md  index.ts  package-lock.json  package.json  tsconfig.json
tts/tts-python-livekit/: .env.example  .gitignore  README.md  main.py  pyproject.toml  settings.py  utils.py  voice_assistant_prompt.py
tts/tts-python-livekit/agent_session/: constants.py  main.py  utils.py
tts/tts-python-livekit/src/: __init__.py  agent_session.py  constants.py  main.py  standalone_tts.py  utils.py
tts/tts-python-livekit/src/agent_session/: __init__.py  constants.py  main.py
tts/tts-python-livekit/src/standalone_tts/: __init__.py  main.py
tts/tts-python-livekit/standalone_tts/: constants.py  main.py  utils.py
tts/tts-python-quickstart/: .env.example  README.md  app.py  conftest.py  pyproject.toml  streaming.py  test_app.py  test_freezegun_repro.py
typescript-next-api-language/: .gitignore  README.md  package-lock.json  package.json
typescript-next-api-routes/: .env.example  .eslintrc.json  package-lock.json  package.json  tailwind.config.js
typescript-raw-text-processor/: .env.example  README.md  package-lock.json  package.json  tsconfig.json
typescript-streaming-sandbox/: package-lock.json  package.json
visualization-example/: predictions.json
(+699 files in other folders)
