[tool.poetry]
name = "evi-modal-clm"
version = "0.1.0"
description = ""
authors = ["Brian Kitano <brian@hume.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
modal = "^0.62.178"
fastapi = "^0.111.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
