[project]
name = "evi-python-quickstart"
version = "0.1.0"
description = "EVI Python quickstart example"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["hume[microphone]>=0.13.7", "python-dotenv>=1.0.1"]

[dependency-groups]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.24.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
