[project]
name = "evi-python-quickstart"
version = "0.1.0"
description = "EVI Python quickstart example"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["hume[microphone]>=0.14.0", "python-dotenv>=1.0.1"]

[dependency-groups]
dev = ["pytest>=9.1.1", "pytest-asyncio>=1.4.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
