[tool.poetry]
name = "evi-python-webhooks-example"
version = "0.1.0"
description = ""
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
hume = "^0.13.11"
python-dotenv = "^1.2.2"
fastapi = "^0.135.3"
uvicorn = "^0.44.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
