[tool.poetry]
name = "evi-modal-clm"
version = "0.1.0"
description = ""
authors = ["Brian Kitano <brian@hume.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
fastapi = "^0.128.5"
modal = "^1.2.1"
python = "^3.11"
aws-cdk-lib = "2.237.1"
constructs = ">=10.0.0,<11.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
