[project]
name = "tts-python-livekit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "livekit-agents[hume]>=1.0.20",
    "livekit-plugins-anthropic>=1.0.20",
    "livekit-plugins-groq>=1.0.20",
    "livekit-plugins-silero>=1.0.20",
    "python-dotenv>=1.1.0",
]
