[project]
name = "tts-python-livekit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "livekit-agents[hume]>=1.5.16",
    "livekit-plugins-anthropic>=1.5.14",
    "livekit-plugins-groq>=1.5.14",
    "livekit-plugins-silero>=1.5.16",
    "python-dotenv>=1.1.0",
    "simpleaudio>=1.0.4",
]
