[tool.poetry]
name = "evi-custom-language-model-sse"
version = "0.1.0"
description = ""
authors = ["brian@hume.ai"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.5"
uvicorn = "^0.32.0"
openai = "^1.54.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
